--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
   <h1>Odin recipe</h1>
+  <a href="./recipes/lasagna.html" target="_blank" rel="noopener noreferre">Lasagna</a>
 </body>
 </html>
